--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Static Template</title>
-    <link rel="stylesheet" href="styles.css" />
-    <script
-      src="https://kit.fontawesome.com/12a4fc5246.js"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="box box1">
